<resources>
    <string name="app_name" translatable="false">Movies</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_main_navigation" translatable="false">MainActivity</string>
    <string name="main">Main</string>
    <string name="favourite">Favourite</string>
    <string name="search">Search</string>
    <string name="popularity">Popularity</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top rated</string>
    <string name="name">Name</string>
    <string name="release_date">Release date</string>
    <string name="overview">Overview</string>
    <string name="actors">Actors</string>
    <string name="recommended">Recommended</string>
    <string name="poster">poster</string>
    <string name="play_video">play_video</string>
</resources>
