<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/product_grid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorBackground"
            android:elevation="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPosters"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
                app:spanCount="1" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fadeScrollbars="false"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:checkedChip="@id/chip4"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popularity"
                        tools:text="Популярность" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upcoming"
                        tools:text="Ожидаемые" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/top_rated"
                        tools:text="Рейтинг" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        tools:text="Название" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        tools:text="Дата выпуска" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

<!--            <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--                android:id="@+id/floatingActionButton"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                android:layout_marginBottom="16dp"-->
<!--                android:clickable="true"-->
<!--                android:elevation="18dp"-->
<!--                android:focusable="true"-->
<!--                android:src="@android:drawable/ic_search_category_default"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/product_grid"-->
<!--                app:layout_constraintEnd_toEndOf="@id/product_grid" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>